# want-some-tea

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.dev  README.md  pyproject.toml
backend/app/: main.py
backend/app/auth/: __init__.py  routers.py  schemas.py  services.py
backend/app/configs/: database.py  middlewares.py  settings.py
backend/app/resources/: core_models.py  exception_handlers.py  logger.py
backend/app/rooms/: __init__.py  models.py  routers.py  schemas.py
backend/app/users/: __init__.py  models.py  routers.py  services.py
frontend/: .eslintrc.json  .gitignore  Dockerfile.dev  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/.storybook/: main.ts  preview.tsx  theme.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/__mocks__/apis/: auth.ts  commonResponse.ts  handlers.ts  rooms.ts  server.ts  worker.ts
frontend/src/__mocks__/data/: auth.ts  error.ts  rooms.ts
frontend/src/__mocks__/utils/: methods.ts
frontend/src/apis/: auth.ts  index.ts  rooms.ts  utils.ts
frontend/src/apis/__tests__/: utils.test.ts
frontend/src/components/Button/: Button.stories.tsx  Button.tsx
frontend/src/components/Card/: Card.tsx
frontend/src/components/ErrorRoute/: ErrorRoute.tsx  index.ts
frontend/src/hooks/: index.ts  useAuthApi.ts  useRoomsApi.ts
frontend/src/models/: api.ts  auth.ts  index.ts  room.ts
frontend/src/routers/: router.tsx  routes.ts
frontend/src/store/: auth.ts
frontend/src/utils/: tests.tsx  theme.ts
nginx/: default.conf
(+41 files in other folders)
